fix spacing on prev/next links

--- a/scss/_links.scss
+++ b/scss/_links.scss
@@ -33,7 +33,7 @@
 .previous-next-links {
 	background-size: cover;
 	width: 100%;
-	height: 84px;
+	height: 5.25rem;
 	position: relative;
 	padding: 0;
 }
@@ -65,7 +65,7 @@
 	}
 
 	span.lnr {
-		font-size: 20px;
+		font-size: 1.25rem;
 		vertical-align: top;
 		font-weight: bold;
 	}
@@ -89,7 +89,7 @@
 	}
 
   small {
-  	margin-left: 25px;
+  	margin-left: 1.5625rem;
   }
 
   .prev-next-text,
@@ -116,6 +116,6 @@
   }
 
 	small {
-		margin-right: 25px;
+		margin-right: 1.5625rem;
 	}
 }
